--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "core-js": "^2.4.1",
+    "@ng-dynamic-forms/core" : "~5.4.7",
+    "@ng-dynamic-forms/ui-primeng" : "~5.4.7",
     "font-awesome": "^4.7.0",
     "primeng": "^5.2.6",
     "rxjs": "^5.5.6",
