--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@ng-dynamic-forms/core": "~5.4.7",
+    "@ng-dynamic-forms/ui-primeng": "~5.4.7",
+    "@types/lodash": "^4.14.109",
     "core-js": "^2.4.1",
-    "@ng-dynamic-forms/core" : "~5.4.7",
-    "@ng-dynamic-forms/ui-primeng" : "~5.4.7",
     "font-awesome": "^4.7.0",
+    "lodash": "^4.17.10",
     "primeng": "^5.2.6",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
